--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ---
-title: Hello World
+title: Dominic Santos
 description: Foobar
 markdown: kramdown
 permalink: /posts/:title
@@ -11,18 +11,12 @@ plugins:
 collections:
   posts:
     title: Posts
-    output: true
+    output: false
   uploads:
     title: Uploads
     output: true
 
 defaults:
-- scope:
-    path: ''
-    type: posts
-  values:
-    layout: post
-    permalink: "/posts/:title/"
 - scope:
     path: ''
     type: pages
