--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/davesantos/jekyll-starter.git"
+  },
+  "dependencies": {
+    "hoek": "^5.0.3"
   }
 }
