Add plugin, update head and config

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,27 @@ description: Foobar
 markdown: kramdown
 permalink: /posts/:title
 exclude: ["bower_components", "node_modules", "config.rb", "gulpfile.js", "package.json","*.sublime-project", "*.sublime-workspace", "*.log", "css/_breakpoints", "LICENSE", "README.md"]
+exclude: ["Gemfile", "modernizr-config.json", "*.lock", "bower_components", "node_modules", "config.rb", "gulpfile.js", "package.json", "package-lock.json","*.sublime-project", "*.sublime-workspace", "*.log", "LICENSE", "README.md"]
+baseurl: /dominicsantos
+
+
+# =======================================
+#
+#             Customization
+#
+# =======================================
+
+
+env: development
+assets:
+  asset_path: /uploads/
+
+
+# =======================================
+#
+#             Jekyll Settings
+#
+# =======================================
 
 # Github pages only runs in safe mode
 safe: true
@@ -32,15 +53,8 @@ sass:
   # style: compressed
   # sass_dir: _sass
 
-# Assets
-# assets:
-  # asset_path: /assets/
-
-# Custom
-
 # Don't forget trailing slash or it won't work on test server
 permalink: :year/:title/
-exclude: ["Gemfile", "modernizr-config.json", "*.lock", "bower_components", "node_modules", "config.rb", "gulpfile.js", "package.json", "package-lock.json","*.sublime-project", "*.sublime-workspace", "*.log", "LICENSE", "README.md"]
 
 # Build settings
 markdown: kramdown
