--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "jekyll-starter",
   "author": "Dave Santos <info@davesantos.com> (https://davesantos.com)",
   "devDependencies": {
-    "browser-sync": "^2.24.4",
+    "browser-sync": "^2.24.5",
     "child_process": "^1.0.2",
-    "gulp": "3.9.1",
+    "gulp": "^4.0.0",
     "gulp-clean-css": "3.9.3",
     "gulp-prettify": "0.5.0",
     "gulp-remove-empty-lines": "0.1.0",
@@ -17,6 +17,7 @@
     "url": "https://github.com/davesantos/jekyll-starter.git"
   },
   "dependencies": {
-    "hoek": "^5.0.3"
+    "hoek": "^5.0.3",
+    "minimatch": "^3.0.4"
   }
 }
