--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "devDependencies": {
     "browser-sync": "^2.24.6",
     "child_process": "^1.0.2",
+    "flickity": "^2.1.2",
     "gulp": "^4.0.0",
     "gulp-clean-css": "3.9.3",
     "gulp-prettify": "0.5.0",
     "gulp-remove-empty-lines": "0.1.0",
     "gulp-sass": "4.0.1",
     "gulp-uglify": "3.0.0",
+    "imports-loader": "^0.8.0",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0"
   },
