--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "hoek": "^5.0.3",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
     "minimatch": "^3.0.4"
   },
   "scripts": {
