--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.24.7",
     "child_process": "^1.0.2",
+    "clean-webpack-plugin": "^0.1.19",
     "flickity": "^2.1.2",
     "gulp": "^4.0.0",
     "gulp-clean-css": "3.9.3",
