--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     ]
   },
   "scripts": {
-    "start": "node_modules/.bin/webpack --watch",
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production && cp js/dist/bundle.js _site/js/dist"
+    "start": "gulp",
+    "dev": "webpack --mode development && cp -a js/dist/. _site/js/dist/",
+    "build": "webpack --mode production && cp -a js/dist/. _site/js/dist/"
   }
 }
