--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-sass": "4.0.1",
     "gulp-uglify": "3.0.0",
     "imports-loader": "^0.8.0",
+    "webfontloader": "^1.6.28",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0"
   },
