--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "dominicsantos",
   "author": "Dave Santos <info@davesantos.com> (https://davesantos.com)",
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.0.0",
     "babel-loader": "^8.0.2",
     "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.24.7",
     "child_process": "^1.0.2",
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.2",
     "flickity": "^2.1.2",
     "gulp": "^4.0.0",
     "gulp-clean-css": "3.9.3",
@@ -15,10 +16,11 @@
     "gulp-remove-empty-lines": "0.1.0",
     "gulp-sass": "4.0.1",
     "gulp-uglify": "3.0.0",
+    "imagemin-webpack-plugin": "^2.2.0",
     "imports-loader": "^0.8.0",
     "smooth-scroll": "^14.2.1",
     "webfontloader": "^1.6.28",
-    "webpack": "^4.16.3",
+    "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0"
   },
   "license": "MIT",
@@ -27,7 +29,7 @@
     "url": "https://github.com/davesantos/dominicsantos.git"
   },
   "dependencies": {
-    "hoek": "^5.0.3",
+    "hoek": "^5.0.4",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "minimatch": "^3.0.4"
