--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dominicsantos",
   "author": "Dave Santos <info@davesantos.com> (https://davesantos.com)",
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.0.2",
     "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.24.7",
