--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-remove-empty-lines": "0.1.0",
     "gulp-sass": "4.0.1",
     "gulp-uglify": "3.0.0",
+    "imagemin-mozjpeg": "^7.0.0",
     "imagemin-webpack-plugin": "^2.2.0",
     "imports-loader": "^0.8.0",
     "smooth-scroll": "^14.2.1",
